--- a/CGMH-Bootstrap-DEMO/CGMH-Bootstrap-DEMO.csproj
+++ b/CGMH-Bootstrap-DEMO/CGMH-Bootstrap-DEMO.csproj
@@ -95,6 +95,8 @@
     <Content Include="Content\bootstrap.min.css.map" />
     <Content Include="Content\bootstrap.css.map" />
     <None Include="Scripts\jquery-1.9.1.intellisense.js" />
+    <Content Include="Images\cgmh-ico.ico" />
+    <Content Include="Images\CGMH.png" />
     <Content Include="pure-html-dmeo.html" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
