--- a/CGMH-Bootstrap-DEMO/CGMH-Bootstrap-DEMO.csproj
+++ b/CGMH-Bootstrap-DEMO/CGMH-Bootstrap-DEMO.csproj
@@ -84,6 +84,7 @@
     <Content Include="Content\bootstrap-theme.min.css" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\main.css" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
     <Content Include="fonts\glyphicons-halflings-regular.woff2" />
@@ -97,7 +98,7 @@
     <None Include="Scripts\jquery-1.9.1.intellisense.js" />
     <Content Include="Images\cgmh-ico.ico" />
     <Content Include="Images\CGMH.png" />
-    <Content Include="pure-html-dmeo.html" />
+    <Content Include="pure-html\pure-html-dmeo.html" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
     <Content Include="Scripts\jquery-1.9.1.js" />
