--- a/CGMH-Bootstrap-DEMO/CGMH-Bootstrap-DEMO.csproj
+++ b/CGMH-Bootstrap-DEMO/CGMH-Bootstrap-DEMO.csproj
@@ -103,6 +103,7 @@
     <Content Include="Scripts\bootstrap.min.js" />
     <Content Include="Scripts\jquery-1.9.1.js" />
     <Content Include="Scripts\jquery-1.9.1.min.js" />
+    <Content Include="web-form\web-form-demo.aspx" />
     <Content Include="Web.config" />
     <Content Include="Scripts\jquery-1.9.1.min.map" />
   </ItemGroup>
@@ -112,6 +113,13 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="web-form\web-form-demo.aspx.cs">
+      <DependentUpon>web-form-demo.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="web-form\web-form-demo.aspx.designer.cs">
+      <DependentUpon>web-form-demo.aspx</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <Content Include="Views\web.config" />
